// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api shoots should be forbidden to list shoots for a single namespace 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
]
`;

exports[`api shoots should be forbidden to list shoots for a single namespace 2`] = `
{
  "code": 403,
  "message": "No authorization to list shoots in namespace garden-foo",
  "reason": "Forbidden",
  "status": "Failure",
}
`;

exports[`api shoots should create a shoot 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    {
      "metadata": {
        "annotations": {
          "gardener.cloud/created-by": "foo@example.org",
        },
        "name": "newShoot",
        "namespace": "garden-foo",
        "uid": "garden-foo--newShoot",
      },
      "spec": {
        "cloudProfile": {
          "kind": "CloudProfile",
          "name": "infra1-profileName",
        },
        "hibernation": {
          "enabled": false,
        },
        "kubernetes": {
          "version": "1.16.0",
        },
        "provider": {
          "type": "fooInfra",
        },
        "purpose": "newPurpose",
        "region": "foo-west",
        "secretBindingName": "foo-infra1",
        "seedName": "infra1-seed",
      },
    },
  ],
]
`;

exports[`api shoots should create a shoot 2`] = `
{
  "metadata": {
    "annotations": {
      "gardener.cloud/created-by": "foo@example.org",
    },
    "name": "newShoot",
    "namespace": "garden-foo",
    "resourceVersion": "42",
    "uid": 21,
  },
  "spec": {
    "cloudProfile": {
      "kind": "CloudProfile",
      "name": "infra1-profileName",
    },
    "hibernation": {
      "enabled": false,
    },
    "kubernetes": {
      "version": "1.16.0",
    },
    "provider": {
      "type": "fooInfra",
    },
    "purpose": "newPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": {
    "technicalID": "shoot--foo--newShoot",
  },
}
`;

exports[`api shoots should delete a shoot 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    {
      "metadata": {
        "annotations": {
          "confirmation.gardener.cloud/deletion": "true",
        },
      },
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "delete",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
]
`;

exports[`api shoots should delete a shoot 2`] = `
{
  "metadata": {
    "annotations": {
      "confirmation.gardener.cloud/deletion": "true",
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "uid": 2,
  },
  "spec": {
    "cloudProfile": {
      "kind": "CloudProfile",
      "name": "infra1-profileName",
    },
    "hibernation": {
      "enabled": false,
    },
    "kubernetes": {
      "version": "1.16.0",
    },
    "provider": {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": {
    "advertisedAddresses": [
      {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should patch annotations 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    {
      "metadata": {
        "annotations": {
          "foo": "bar",
        },
      },
    },
  ],
]
`;

exports[`api shoots should patch annotations 2`] = `
{
  "metadata": {
    "annotations": {
      "foo": "bar",
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": {
    "cloudProfile": {
      "kind": "CloudProfile",
      "name": "infra1-profileName",
    },
    "hibernation": {
      "enabled": false,
    },
    "kubernetes": {
      "version": "1.16.0",
    },
    "provider": {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": {
    "advertisedAddresses": [
      {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace addons 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    {
      "spec": {
        "addons": [
          {
            "testAddon": {
              "enabled": true,
              "foo": "bar",
            },
          },
        ],
      },
    },
  ],
]
`;

exports[`api shoots should replace addons 2`] = `
{
  "metadata": {
    "annotations": {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": {
    "addons": [
      {
        "testAddon": {
          "enabled": true,
          "foo": "bar",
        },
      },
    ],
    "cloudProfile": {
      "kind": "CloudProfile",
      "name": "infra1-profileName",
    },
    "hibernation": {
      "enabled": false,
    },
    "kubernetes": {
      "version": "1.16.0",
    },
    "provider": {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": {
    "advertisedAddresses": [
      {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace hibernation enabled 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    {
      "spec": {
        "hibernation": {
          "enabled": true,
        },
      },
    },
  ],
]
`;

exports[`api shoots should replace hibernation enabled 2`] = `
{
  "metadata": {
    "annotations": {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": {
    "cloudProfile": {
      "kind": "CloudProfile",
      "name": "infra1-profileName",
    },
    "hibernation": {
      "enabled": true,
    },
    "kubernetes": {
      "version": "1.16.0",
    },
    "provider": {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": {
    "advertisedAddresses": [
      {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace hibernation schedules 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    {
      "spec": {
        "hibernation": {
          "schedules": [
            {
              "end": "00 08 * * 1,2,3,4,5,6",
              "start": "00 17 * * 1,2,3,4,5,6",
            },
          ],
        },
      },
    },
  ],
]
`;

exports[`api shoots should replace hibernation schedules 2`] = `
{
  "metadata": {
    "annotations": {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": {
    "cloudProfile": {
      "kind": "CloudProfile",
      "name": "infra1-profileName",
    },
    "hibernation": {
      "enabled": false,
      "schedules": [
        {
          "end": "00 08 * * 1,2,3,4,5,6",
          "start": "00 17 * * 1,2,3,4,5,6",
        },
      ],
    },
    "kubernetes": {
      "version": "1.16.0",
    },
    "provider": {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": {
    "advertisedAddresses": [
      {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace purpose 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    {
      "spec": {
        "purpose": "testing",
      },
    },
  ],
]
`;

exports[`api shoots should replace purpose 2`] = `
{
  "metadata": {
    "annotations": {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": {
    "cloudProfile": {
      "kind": "CloudProfile",
      "name": "infra1-profileName",
    },
    "hibernation": {
      "enabled": false,
    },
    "kubernetes": {
      "version": "1.16.0",
    },
    "provider": {
      "type": "fooInfra",
    },
    "purpose": "testing",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": {
    "advertisedAddresses": [
      {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace shoot 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "put",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    {
      "apiVersion": undefined,
      "kind": undefined,
      "metadata": {
        "annotations": {
          "gardener.cloud/created-by": "baz@example.org",
        },
        "labels": {
          "foo": "bar",
        },
        "name": "barShoot",
        "namespace": "garden-foo",
        "uid": 2,
      },
      "spec": {
        "cloudProfile": {
          "kind": "CloudProfile",
          "name": "infra1-profileName",
        },
        "hibernation": {
          "enabled": false,
        },
        "kubernetes": {
          "version": "1.16.0",
        },
        "provider": {
          "type": "fooInfra",
        },
        "purpose": "barPurpose",
        "region": "foo-west",
        "secretBindingName": "foo-infra1",
        "seedName": "infra1-seed",
      },
      "status": {
        "advertisedAddresses": [
          {
            "name": "external",
            "url": "https://api.barShoot.foo.shoot.test",
          },
        ],
        "technicalID": "shoot--foo--barShoot",
      },
    },
  ],
]
`;

exports[`api shoots should replace shoot 2`] = `
{
  "metadata": {
    "annotations": {
      "gardener.cloud/created-by": "baz@example.org",
    },
    "labels": {
      "foo": "bar",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": {
    "cloudProfile": {
      "kind": "CloudProfile",
      "name": "infra1-profileName",
    },
    "hibernation": {
      "enabled": false,
    },
    "kubernetes": {
      "version": "1.16.0",
    },
    "provider": {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": {
    "advertisedAddresses": [
      {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace shoot kubernetes version 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/json-patch+json",
    },
    [
      {
        "op": "replace",
        "path": "/spec/kubernetes/version",
        "value": "1.17.1",
      },
    ],
  ],
]
`;

exports[`api shoots should replace shoot kubernetes version 2`] = `
{
  "metadata": {
    "annotations": {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": {
    "cloudProfile": {
      "kind": "CloudProfile",
      "name": "infra1-profileName",
    },
    "hibernation": {
      "enabled": false,
    },
    "kubernetes": {
      "version": "1.17.1",
    },
    "provider": {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": {
    "advertisedAddresses": [
      {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace shoot maintenance data 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    {
      "spec": {
        "maintenance": {
          "autoUpdate": {
            "kubernetesVersion": true,
            "machineImageVersion": undefined,
          },
          "timeWindow": {
            "begin": "230000+0000",
            "end": "000000+0000",
          },
        },
      },
    },
  ],
]
`;

exports[`api shoots should replace shoot maintenance data 2`] = `
{
  "metadata": {
    "annotations": {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": {
    "cloudProfile": {
      "kind": "CloudProfile",
      "name": "infra1-profileName",
    },
    "hibernation": {
      "enabled": false,
    },
    "kubernetes": {
      "version": "1.16.0",
    },
    "maintenance": {
      "autoUpdate": {
        "kubernetesVersion": true,
      },
      "timeWindow": {
        "begin": "230000+0000",
        "end": "000000+0000",
      },
    },
    "provider": {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": {
    "advertisedAddresses": [
      {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace shoot seedname 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot/binding",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/json-patch+json",
    },
    [
      {
        "op": "replace",
        "path": "/spec/seedName",
        "value": "foo-new-seed",
      },
    ],
  ],
]
`;

exports[`api shoots should replace shoot seedname 2`] = `
{
  "metadata": {
    "annotations": {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "uid": 2,
  },
  "spec": {
    "cloudProfile": {
      "kind": "CloudProfile",
      "name": "infra1-profileName",
    },
    "hibernation": {
      "enabled": false,
    },
    "kubernetes": {
      "version": "1.16.0",
    },
    "provider": {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "foo-new-seed",
  },
  "status": {
    "advertisedAddresses": [
      {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should replace shoot workers 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
      "content-type": "application/merge-patch+json",
    },
    {
      "spec": {
        "provider": {
          "network": {
            "zones": [
              {
                "workers": "10.250.0.0/20",
              },
            ],
          },
          "workers": [
            {
              "name": "worker-g5rk1",
            },
          ],
        },
      },
    },
  ],
]
`;

exports[`api shoots should replace shoot workers 2`] = `
{
  "metadata": {
    "annotations": {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "uid": 2,
  },
  "spec": {
    "cloudProfile": {
      "kind": "CloudProfile",
      "name": "infra1-profileName",
    },
    "hibernation": {
      "enabled": false,
    },
    "kubernetes": {
      "version": "1.16.0",
    },
    "provider": {
      "network": {
        "zones": [
          {
            "workers": "10.250.0.0/20",
          },
        ],
      },
      "type": "fooInfra",
      "workers": [
        {
          "name": "worker-g5rk1",
        },
      ],
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": {
    "advertisedAddresses": [
      {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should return a shoot 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
]
`;

exports[`api shoots should return a shoot 2`] = `
{
  "metadata": {
    "annotations": {
      "gardener.cloud/created-by": "bar@example.org",
    },
    "name": "barShoot",
    "namespace": "garden-foo",
    "uid": 2,
  },
  "spec": {
    "cloudProfile": {
      "kind": "CloudProfile",
      "name": "infra1-profileName",
    },
    "hibernation": {
      "enabled": false,
    },
    "kubernetes": {
      "version": "1.16.0",
    },
    "provider": {
      "type": "fooInfra",
    },
    "purpose": "barPurpose",
    "region": "foo-west",
    "secretBindingName": "foo-infra1",
    "seedName": "infra1-seed",
  },
  "status": {
    "advertisedAddresses": [
      {
        "name": "external",
        "url": "https://api.barShoot.foo.shoot.test",
      },
    ],
    "technicalID": "shoot--foo--barShoot",
  },
}
`;

exports[`api shoots should return a shoot admin kubeconfig 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot/adminkubeconfig",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    {
      "apiVersion": "authentication.gardener.cloud/v1alpha1",
      "kind": "AdminKubeconfigRequest",
      "spec": {
        "expirationSeconds": 600,
      },
    },
  ],
]
`;

exports[`api shoots should return a shoot admin kubeconfig: body 1`] = `
{
  "kubeconfig": Any<String>,
}
`;

exports[`api shoots should return a shoot admin kubeconfig: body.kubeconfig 1`] = `
{
  "clusters": [
    {
      "cluster": {
        "server": "https://shootApiServerHostname:6443",
      },
      "name": "cluster",
    },
  ],
  "contexts": [
    {
      "context": {
        "cluster": "cluster",
        "user": "user",
      },
      "name": "default",
    },
  ],
  "current-context": "default",
  "users": [
    {
      "name": "user",
      "user": {
        "client-certificate-data": "Y2VydGlmaWNhdGUtYXV0aG9yaXR5LWRhdGE=",
        "client-key-data": "Y2xpZW50LWtleS1kYXRh",
      },
    },
  ],
}
`;

exports[`api shoots should return all shoots for a non-admin user 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "namespace": undefined,
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "namespace": "garden-bar",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
]
`;

exports[`api shoots should return all shoots for a non-admin user 2`] = `
{
  "apiVersion": "v1",
  "items": [
    {
      "metadata": {
        "annotations": {
          "gardener.cloud/created-by": "foo@example.org",
        },
        "labels": {
          "shoot.gardener.cloud/status": "healthy",
        },
        "name": "fooShoot",
        "namespace": "garden-foo",
        "uid": 1,
      },
      "spec": {
        "cloudProfile": {
          "kind": "CloudProfile",
          "name": "infra1-profileName",
        },
        "hibernation": {
          "enabled": false,
        },
        "kubernetes": {
          "version": "1.16.0",
        },
        "provider": {
          "type": "fooInfra",
        },
        "purpose": "fooPurpose",
        "region": "foo-west",
        "secretBindingName": "foo-infra1",
        "seedName": "infra1-seed",
      },
      "status": {
        "advertisedAddresses": [
          {
            "name": "external",
            "url": "https://api.fooShoot.foo.shoot.test",
          },
        ],
        "technicalID": "shoot--foo--fooShoot",
      },
    },
    {
      "metadata": {
        "annotations": {
          "gardener.cloud/created-by": "bar@example.org",
        },
        "labels": {
          "shoot.gardener.cloud/status": "healthy",
        },
        "name": "barShoot",
        "namespace": "garden-foo",
        "uid": 2,
      },
      "spec": {
        "cloudProfile": {
          "kind": "CloudProfile",
          "name": "infra1-profileName",
        },
        "hibernation": {
          "enabled": false,
        },
        "kubernetes": {
          "version": "1.16.0",
        },
        "provider": {
          "type": "fooInfra",
        },
        "purpose": "barPurpose",
        "region": "foo-west",
        "secretBindingName": "foo-infra1",
        "seedName": "infra1-seed",
      },
      "status": {
        "advertisedAddresses": [
          {
            "name": "external",
            "url": "https://api.barShoot.foo.shoot.test",
          },
        ],
        "technicalID": "shoot--foo--barShoot",
      },
    },
    {
      "metadata": {
        "annotations": {
          "gardener.cloud/created-by": "foo@example.org",
        },
        "labels": {
          "shoot.gardener.cloud/status": "unhealthy",
        },
        "name": "dummyShoot",
        "namespace": "garden-foo",
        "uid": 3,
      },
      "spec": {
        "cloudProfile": {
          "kind": "CloudProfile",
          "name": "infra1-profileName",
        },
        "hibernation": {
          "enabled": false,
        },
        "kubernetes": {
          "version": "1.16.0",
        },
        "provider": {
          "type": "fooInfra",
        },
        "purpose": "fooPurpose",
        "region": "foo-west",
        "secretBindingName": "barSecretName",
        "seedName": "infra1-seed",
      },
      "status": {
        "technicalID": "shoot--foo--dummyShoot",
      },
    },
  ],
  "kind": "List",
}
`;

exports[`api shoots should return all shoots for an admin user 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "namespace": undefined,
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
]
`;

exports[`api shoots should return all shoots for an admin user 2`] = `
{
  "apiVersion": "v1",
  "items": [
    {
      "metadata": {
        "annotations": {
          "gardener.cloud/created-by": "foo@example.org",
        },
        "labels": {
          "shoot.gardener.cloud/status": "healthy",
        },
        "name": "fooShoot",
        "namespace": "garden-foo",
        "uid": 1,
      },
      "spec": {
        "cloudProfile": {
          "kind": "CloudProfile",
          "name": "infra1-profileName",
        },
        "hibernation": {
          "enabled": false,
        },
        "kubernetes": {
          "version": "1.16.0",
        },
        "provider": {
          "type": "fooInfra",
        },
        "purpose": "fooPurpose",
        "region": "foo-west",
        "secretBindingName": "foo-infra1",
        "seedName": "infra1-seed",
      },
      "status": {
        "advertisedAddresses": [
          {
            "name": "external",
            "url": "https://api.fooShoot.foo.shoot.test",
          },
        ],
        "technicalID": "shoot--foo--fooShoot",
      },
    },
    {
      "metadata": {
        "annotations": {
          "gardener.cloud/created-by": "bar@example.org",
        },
        "labels": {
          "shoot.gardener.cloud/status": "healthy",
        },
        "name": "barShoot",
        "namespace": "garden-foo",
        "uid": 2,
      },
      "spec": {
        "cloudProfile": {
          "kind": "CloudProfile",
          "name": "infra1-profileName",
        },
        "hibernation": {
          "enabled": false,
        },
        "kubernetes": {
          "version": "1.16.0",
        },
        "provider": {
          "type": "fooInfra",
        },
        "purpose": "barPurpose",
        "region": "foo-west",
        "secretBindingName": "foo-infra1",
        "seedName": "infra1-seed",
      },
      "status": {
        "advertisedAddresses": [
          {
            "name": "external",
            "url": "https://api.barShoot.foo.shoot.test",
          },
        ],
        "technicalID": "shoot--foo--barShoot",
      },
    },
    {
      "metadata": {
        "annotations": {
          "gardener.cloud/created-by": "foo@example.org",
        },
        "labels": {
          "shoot.gardener.cloud/status": "unhealthy",
        },
        "name": "dummyShoot",
        "namespace": "garden-foo",
        "uid": 3,
      },
      "spec": {
        "cloudProfile": {
          "kind": "CloudProfile",
          "name": "infra1-profileName",
        },
        "hibernation": {
          "enabled": false,
        },
        "kubernetes": {
          "version": "1.16.0",
        },
        "provider": {
          "type": "fooInfra",
        },
        "purpose": "fooPurpose",
        "region": "foo-west",
        "secretBindingName": "barSecretName",
        "seedName": "infra1-seed",
      },
      "status": {
        "technicalID": "shoot--foo--dummyShoot",
      },
    },
    {
      "metadata": {
        "annotations": {
          "gardener.cloud/created-by": "admin@example.org",
        },
        "labels": {
          "shoot.gardener.cloud/status": "healthy",
        },
        "name": "infra1-seed",
        "namespace": "garden",
        "uid": 4,
      },
      "spec": {
        "cloudProfile": {
          "kind": "CloudProfile",
          "name": "infra1-profileName",
        },
        "hibernation": {
          "enabled": false,
        },
        "kubernetes": {
          "version": "1.16.0",
        },
        "provider": {
          "type": "fooInfra",
        },
        "purpose": "foo-purpose",
        "region": "foo-west",
        "secretBindingName": "soil-infra1",
        "seedName": "soil-infra1",
      },
      "status": {
        "advertisedAddresses": [
          {
            "name": "external",
            "url": "https://api.infra1-seed.garden.shoot.test",
          },
        ],
        "technicalID": "shoot--garden--infra1-seed",
      },
    },
  ],
  "kind": "List",
}
`;

exports[`api shoots should return all unhealthy shoots 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "namespace": undefined,
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
]
`;

exports[`api shoots should return all unhealthy shoots 2`] = `
{
  "apiVersion": "v1",
  "items": [
    {
      "metadata": {
        "annotations": {
          "gardener.cloud/created-by": "foo@example.org",
        },
        "labels": {
          "shoot.gardener.cloud/status": "unhealthy",
        },
        "name": "dummyShoot",
        "namespace": "garden-foo",
        "uid": 3,
      },
      "spec": {
        "cloudProfile": {
          "kind": "CloudProfile",
          "name": "infra1-profileName",
        },
        "hibernation": {
          "enabled": false,
        },
        "kubernetes": {
          "version": "1.16.0",
        },
        "provider": {
          "type": "fooInfra",
        },
        "purpose": "fooPurpose",
        "region": "foo-west",
        "secretBindingName": "barSecretName",
        "seedName": "infra1-seed",
      },
      "status": {
        "technicalID": "shoot--foo--dummyShoot",
      },
    },
  ],
  "kind": "List",
}
`;

exports[`api shoots should return shoot info 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/barShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/api/v1/namespaces/garden-foo/configmaps/barShoot.ca-cluster",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/api/v1/namespaces/kube-system/configmaps/cluster-identity",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJrdWJlcm5ldGVzL3NlcnZpY2VhY2NvdW50Iiwic3ViIjoic3lzdGVtOnNlcnZpY2VhY2NvdW50OmdhcmRlbjpkZWZhdWx0In0.-4rSuvvj5BStN6DwnmLAaRVbgpl5iCn2hG0pcqx0NPw",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden/shoots/infra1-seed",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "",
          "name": "barShoot.monitoring",
          "namespace": "garden-foo",
          "resource": "secrets",
          "verb": "get",
        },
      },
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/api/v1/namespaces/garden-foo/secrets/barShoot.monitoring",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
]
`;

exports[`api shoots should return shoot info without gardenlogin kubeconfig 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/shoots/dummyShoot",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden/shoots/infra1-seed",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "",
          "name": "dummyShoot.monitoring",
          "namespace": "garden-foo",
          "resource": "secrets",
          "verb": "get",
        },
      },
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/api/v1/namespaces/garden-foo/secrets/dummyShoot.monitoring",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
  ],
]
`;

exports[`api shoots should return shoot info without gardenlogin kubeconfig: body 1`] = `
{
  "canLinkToSeed": false,
  "dashboardUrlPath": "/api/v1/namespaces/kubernetes-dashboard/services/https:kubernetes-dashboard:/proxy/",
  "monitoringPassword": "pass-garden-foo-dummyShoot.monitoring",
  "monitoringUsername": "user-garden-foo-dummyShoot.monitoring",
}
`;

exports[`api shoots should return shoot info: body 1`] = `
{
  "canLinkToSeed": false,
  "dashboardUrlPath": "/api/v1/namespaces/kubernetes-dashboard/services/https:kubernetes-dashboard:/proxy/",
  "kubeconfigGardenlogin": Any<String>,
  "monitoringPassword": "pass-garden-foo-barShoot.monitoring",
  "monitoringUsername": "user-garden-foo-barShoot.monitoring",
}
`;

exports[`api shoots should return shoot info: body.kubeconfigGardenlogin 1`] = `
{
  "apiVersion": "v1",
  "clusters": [
    {
      "cluster": {
        "certificate-authority-data": "Y2EuY3J0",
        "extensions": [
          {
            "extension": {
              "gardenClusterIdentity": "kubernetes",
              "shootRef": {
                "name": "barShoot",
                "namespace": "garden-foo",
              },
            },
            "name": "client.authentication.k8s.io/exec",
          },
        ],
        "server": "https://api.barShoot.foo.shoot.test",
      },
      "name": "garden-foo--barShoot-external",
    },
  ],
  "contexts": [
    {
      "context": {
        "cluster": "garden-foo--barShoot-external",
        "namespace": "default",
        "user": "garden-foo--barShoot",
      },
      "name": "garden-foo--barShoot-external",
    },
  ],
  "current-context": "garden-foo--barShoot-external",
  "kind": "Config",
  "users": [
    {
      "name": "garden-foo--barShoot",
      "user": {
        "exec": {
          "apiVersion": "client.authentication.k8s.io/v1beta1",
          "args": [
            "get-client-certificate",
          ],
          "command": "kubectl-gardenlogin",
          "installHint": "Follow the instructions on
- https://github.com/gardener/gardenlogin#installation to install and
- https://github.com/gardener/gardenlogin#configure-gardenlogin to configure the gardenlogin credential plugin.

The following is a sample configuration for gardenlogin as well as gardenctl. Place the file under ~/.garden/gardenctl-v2.yaml.

---
gardens:
  - identity: kubernetes
    kubeconfig: "<path-to-garden-cluster-kubeconfig>"
...

Alternatively, you can run the following gardenctl command:

$ gardenctl config set-garden kubernetes --kubeconfig "<path-to-garden-cluster-kubeconfig>"

Note that the kubeconfig refers to the path of the garden cluster kubeconfig which you can download from the Account page.",
          "interactiveMode": "IfAvailable",
          "provideClusterInfo": true,
        },
      },
    },
  ],
}
`;

exports[`api shoots should return shoots for a single namespace 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
]
`;

exports[`api shoots should return shoots for a single namespace 2`] = `
{
  "apiVersion": "v1",
  "items": [
    {
      "metadata": {
        "annotations": {
          "gardener.cloud/created-by": "foo@example.org",
        },
        "labels": {
          "shoot.gardener.cloud/status": "healthy",
        },
        "name": "fooShoot",
        "namespace": "garden-foo",
        "uid": 1,
      },
      "spec": {
        "cloudProfile": {
          "kind": "CloudProfile",
          "name": "infra1-profileName",
        },
        "hibernation": {
          "enabled": false,
        },
        "kubernetes": {
          "version": "1.16.0",
        },
        "provider": {
          "type": "fooInfra",
        },
        "purpose": "fooPurpose",
        "region": "foo-west",
        "secretBindingName": "foo-infra1",
        "seedName": "infra1-seed",
      },
      "status": {
        "advertisedAddresses": [
          {
            "name": "external",
            "url": "https://api.fooShoot.foo.shoot.test",
          },
        ],
        "technicalID": "shoot--foo--fooShoot",
      },
    },
    {
      "metadata": {
        "annotations": {
          "gardener.cloud/created-by": "bar@example.org",
        },
        "labels": {
          "shoot.gardener.cloud/status": "healthy",
        },
        "name": "barShoot",
        "namespace": "garden-foo",
        "uid": 2,
      },
      "spec": {
        "cloudProfile": {
          "kind": "CloudProfile",
          "name": "infra1-profileName",
        },
        "hibernation": {
          "enabled": false,
        },
        "kubernetes": {
          "version": "1.16.0",
        },
        "provider": {
          "type": "fooInfra",
        },
        "purpose": "barPurpose",
        "region": "foo-west",
        "secretBindingName": "foo-infra1",
        "seedName": "infra1-seed",
      },
      "status": {
        "advertisedAddresses": [
          {
            "name": "external",
            "url": "https://api.barShoot.foo.shoot.test",
          },
        ],
        "technicalID": "shoot--foo--barShoot",
      },
    },
    {
      "metadata": {
        "annotations": {
          "gardener.cloud/created-by": "foo@example.org",
        },
        "labels": {
          "shoot.gardener.cloud/status": "unhealthy",
        },
        "name": "dummyShoot",
        "namespace": "garden-foo",
        "uid": 3,
      },
      "spec": {
        "cloudProfile": {
          "kind": "CloudProfile",
          "name": "infra1-profileName",
        },
        "hibernation": {
          "enabled": false,
        },
        "kubernetes": {
          "version": "1.16.0",
        },
        "provider": {
          "type": "fooInfra",
        },
        "purpose": "fooPurpose",
        "region": "foo-west",
        "secretBindingName": "barSecretName",
        "seedName": "infra1-seed",
      },
      "status": {
        "technicalID": "shoot--foo--dummyShoot",
      },
    },
  ],
  "kind": "List",
}
`;
